--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐠 Pergunte ao Peixe</title>
     <link rel="icon" type="image/png" href="assets/peixoto_sabido.png">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Sail&display=swap');
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Sail', cursive;
+            font-family: 'Pacifico', cursive;
         }
         body {
             min-height: 100vh;
@@ -21,7 +21,7 @@
             flex-direction: column;
             background: url('assets/blobloblob.gif') center/cover fixed;
             position: relative;
-            overflow: hidden;
+            overflow: auto;
         }
         .bubbles {
             position: absolute;
@@ -37,23 +37,25 @@
             border-radius: 50%;
             animation: floatBubble 6s infinite ease-in-out;
             opacity: 0.7;
+            width: 20px;
+            height: 20px;
         }
         @keyframes floatBubble {
             0% { transform: translateY(0) scale(1); opacity: 1; }
             100% { transform: translateY(-100vh) scale(0.5); opacity: 0; }
         }
         .container {
-            background: rgba(255, 255, 255, 0.03); /* Container quase invisível */
-            padding: 1rem 1rem; /* Padding reduzido */
+            background: rgba(255, 255, 255, 0.03);
+            padding: 1rem;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); /* Sombra mais suave */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             max-width: 800px;
             width: 95%;
             text-align: center;
             position: relative;
             z-index: 1;
             backdrop-filter: blur(12px);
-            margin-top: -40px; /* Container mais para cima */
+            margin-top: 20px;
             overflow: visible;
         }
         .container::after {
@@ -64,43 +66,51 @@
             right: 2px;
             bottom: 2px;
             border-radius: 18px;
-            background: rgba(255, 255, 255, 0.03); /* Fundo quase invisível */
+            background: rgba(255, 255, 255, 0.03);
             z-index: -1;
+        }
+        .title-container {
+            position: relative;
+            z-index: 1;
+            margin-top: 0;
         }
         .title-svg {
             width: 100%;
             height: auto;
-            margin-bottom: 0; /* Removido espaço abaixo do título */
+            margin-bottom: 0;
+            filter: drop-shadow(4px 6px 8px rgba(0, 0, 0, 0.6));
         }
         .title-svg text {
             fill: url(#gradient);
             font-size: 4rem;
             font-weight: bold;
             text-anchor: middle;
-            font-family: 'Sail', cursive;
-            filter: drop-shadow(4px 6px 8px rgba(0, 0, 0, 0.4));
+            font-family: 'Pacifico', cursive;
             letter-spacing: 2px;
+            stroke: white;
+            stroke-width: 2px;
+            paint-order: stroke;
         }
         .fish-container {
-            margin: -70px 0 10px 0; /* Peixe mais para cima */
+            margin: -50px 0 10px 0;
             animation: floatFish 3s infinite ease-in-out;
             position: relative;
+            filter: drop-shadow(0 20px 15px rgba(0, 0, 0, 0.4));
         }
         @keyframes floatFish {
             0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-15px); }
         }
         .fish-image {
-            width: 400px;
+            width: 350px;
             height: auto;
-            filter: drop-shadow(6px 8px 10px rgba(0, 0, 0, 0.4));
         }
         .options {
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 20px;
-            margin: 1rem 0;
+            margin: 0.5rem 0;
         }
         .vs {
             font-size: 2.5rem;
@@ -108,11 +118,11 @@
             font-weight: bold;
         }
         input {
-            padding: 20px;
+            padding: 15px;
             border: 3px solid #1a5f7a;
             border-radius: 20px;
-            font-size: 1.6rem;
-            width: 280px;
+            font-size: 1.4rem;
+            width: 250px;
             background: rgba(255, 255, 255, 0.85);
             text-align: center;
             transition: all 0.3s ease;
@@ -124,13 +134,13 @@
         button {
             background: linear-gradient(45deg, #1a5f7a, #159895);
             color: white;
-            padding: 18px 35px;
+            padding: 15px 30px;
             border-radius: 30px;
-            font-size: 1.6rem;
+            font-size: 1.4rem;
             cursor: pointer;
             transition: all 0.3s ease;
             border: none;
-            margin-top: 1rem;
+            margin-top: 0.5rem;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
         button:hover {
@@ -139,10 +149,10 @@
         }
         #result {
             display: none;
-            margin-top: 1.5rem;
-            font-size: 1.8rem;
+            margin-top: 1rem;
+            font-size: 1.6rem;
             color: #1a5f7a;
-            padding: 15px;
+            padding: 10px;
             background: rgba(255, 255, 255, 0.9);
             border-radius: 15px;
             font-weight: bold;
@@ -152,10 +162,7 @@
             transition: transform 0.3s ease, opacity 0.3s ease;
         }
         .footer {
-            position: fixed;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            position: relative;
             text-align: center;
             font-size: 1.2rem;
             color: white;
@@ -164,10 +171,92 @@
             border-radius: 12px;
             font-family: Arial, Helvetica, sans-serif;
             z-index: 2;
+            margin-top: 40px;
+            margin-bottom: 20px;
         }
         .footer strong {
             color: #00e1ff;
             font-size: 1.4rem;
+            stroke: white;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 0.5rem;
+                margin-top: 10px;
+            }
+
+            .title-svg text {
+                font-size: 3rem;
+            }
+
+            .fish-image {
+                width: 250px;
+            }
+
+            .options {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            input {
+                width: 100%;
+                font-size: 1.2rem;
+                padding: 10px;
+            }
+
+            button {
+                font-size: 1.2rem;
+                padding: 10px 20px;
+            }
+
+            #result {
+                font-size: 1.4rem;
+            }
+
+            .footer {
+                font-size: 1rem;
+                padding: 10px 20px;
+            }
+
+            .bubbles span {
+                width: 15px;
+                height: 15px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .title-svg text {
+                font-size: 2.5rem;
+            }
+
+            .fish-image {
+                width: 200px;
+            }
+
+            input {
+                font-size: 1rem;
+                padding: 8px;
+            }
+
+            button {
+                font-size: 1rem;
+                padding: 8px 16px;
+            }
+
+            #result {
+                font-size: 1.2rem;
+            }
+
+            .footer {
+                font-size: 0.9rem;
+                padding: 8px 16px;
+            }
+
+            .bubbles span {
+                width: 10px;
+                height: 10px;
+            }
         }
     </style>
 </head>
@@ -175,14 +264,14 @@
     <div class="bubbles" id="bubbles-container"></div>
     <div class="container">
         <div class="title-container">
-            <svg class="title-svg" viewBox="0 0 800 200">
+            <svg class="title-svg" viewBox="0 0 800 250">
                 <defs>
                     <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="0%">
                         <stop offset="0%" stop-color="#1a5f7a" />
                         <stop offset="100%" stop-color="#159895" />
                     </linearGradient>
                 </defs>
-                <path id="curve" d="M50,150 Q400,-50 750,150" fill="transparent"/>
+                <path id="curve" d="M50,200 Q400,0 750,200" fill="transparent"/>
                 <text>
                     <textPath xlink:href="#curve" startOffset="50%">Pergunte ao Fisherlock</textPath>
                 </text>
@@ -220,12 +309,14 @@
             result.style.opacity = "1";
             createBubbles();
         }
+
         function createBubbles() {
             const bubblesContainer = document.getElementById('bubbles-container');
-            for (let i = 0; i < 200; i++) {
+            const bubbleCount = window.innerWidth < 768 ? 100 : 200;
+            for (let i = 0; i < bubbleCount; i++) {
                 const bubble = document.createElement('span');
                 bubble.style.left = `${Math.random() * 100}%`;
-                bubble.style.width = `${Math.random() * 30 + 10}px`;
+                bubble.style.width = `${Math.random() * 20 + 10}px`;
                 bubble.style.height = bubble.style.width;
                 bubble.style.animationDuration = `${Math.random() * 4 + 3}s`;
                 bubblesContainer.appendChild(bubble);
